--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script/register --watch",
-    "build": "gulp --require coffee-script/register"
+    "build": "webpack --watch"
   },
   "keywords": [
     "vector2d",
@@ -21,12 +21,10 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "chai": "~3.4.0",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "~1.10.0",
     "mocha": "~2.3.3",
-    "gulp-coffee": "~2.3.1",
-    "gulp": "~3.9.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-uglify": "~1.4.2",
-    "coffee-script": "~1.10.0"
+    "webpack": "^1.12.9"
   },
   "bugs": {
     "url": "https://github.com/archieDeveloper/vector2d-extended/issues"
