--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   "description": "Vector2d class",
   "main": "index.js",
   "scripts": {
+  	"dev": "webpack --watch",
     "test": "mocha --watch",
-    "build": "webpack --watch"
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "webpack"
   },
   "keywords": [
     "vector2d",
@@ -20,13 +25,17 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-typescript": "^7.1.0",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "source-map-loader": "^0.2.4",
+    "ts-loader": "^5.3.3",
     "typescript": "^3.2.2",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.4",
